solved overflow problem

--- a/src/components/scss/input.scss
+++ b/src/components/scss/input.scss
@@ -6,7 +6,7 @@ body{
     min-height: 100vh;
     margin: 1rem;
     background-color: u.$soft-white;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 #root{
     display: grid;
